Added Password and Username check, Clearing Db flag on Home screen, Other minor changes

--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -707,5 +707,6 @@
 
     <!--Login Screen (New Changes)-->
     <string name="txt_sign_up_option">Don\'t have an account?</string>
+    <string name="username_password_must_be_different">Username and Password must be different</string>
 
 </resources>
