--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -689,8 +689,7 @@
     <string name="ppe_req_sub_header">This service is currently available in Mumbai and Delhi only. We aim to serve as many as possible and hope to expand this service to other areas soon.</string>
     <string name="ppe_req">पीपीई किट ऑर्डर करा</string>
     <string name="ppe_req_hint">What PPE do you require with quantity*</string>
-
-    <string name="txt_whatsapp_helpline">व्हॉट्सअ‍ॅप हेल्पलाइन</string>
+    <string name="txt_whatsapp_helpline"><u>व्हॉट्सअ‍ॅप हेल्पलाइन</u></string>
     <string name="Mental_health_support_text">Feeling stressed or anxious? Here are some self-care and support resources for healthcare providers</string>
     <string name="tele_consultant_text">Feeling stressed or anxious? Request for a free confidential mental health consultation with a counsellor.</string>
     <string name="mental_health_support">मानसिक आरोग्य समर्थन</string>
